Fixed rings being buggy when too small

--- a/final-project/css/index.css
+++ b/final-project/css/index.css
@@ -134,7 +134,6 @@ p, h1, h2, h3, .badge, button {
 
         /** == RINGS == **/
         .ring {
-            /* content:'';*/
             width: 400px;
             height: 300px;
             border: 5em solid rgba(255, 255, 255, 0.5);
@@ -143,6 +142,8 @@ p, h1, h2, h3, .badge, button {
             border-radius: 50%;
             top: -25%;
             left: -50%;
+            -webkit-transition: border-width 0.5s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+            transition: border-width 0.5s ease-out;
         }
 
         .planet-column {
